--- a/source/sass/blocks/about-list.scss
+++ b/source/sass/blocks/about-list.scss
@@ -6,6 +6,10 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  margin-bottom: 13px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 @media (min-width: 768px) {
@@ -19,13 +23,5 @@
   .about-list {
     padding: 0;
     margin-right: 80px;
-  }
-
-  .about-list__item {
-    &:last-child {
-      input {
-        margin-bottom: 0;
-      }
-    }
   }
 }
