--- a/source/sass/blocks/index-list.scss
+++ b/source/sass/blocks/index-list.scss
@@ -41,13 +41,12 @@
   padding-left: 20px;
   display: flex;
   flex-direction: column;
-
 }
 
 @media (min-width: 768px) {
   .index-list{
     justify-content: start;
-    margin-bottom: 255px;
+    margin-bottom: 0;
   }
 
   .index-list__item {
@@ -77,7 +76,7 @@
 
 @media (min-width: 1300px) {
   .index-list{
-    margin-bottom: 25px;
+    margin-bottom: 60px;
   }
 
   .index-list__title {
