--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: 320px 305px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .page-main__banner-green {
@@ -64,11 +65,11 @@
   }
 }
 
-.page-main__choice {
-  margin-bottom: 20px;
-}
-
 @media (min-width: 768px) {
+  .page-main__banner {
+    margin-bottom: 529px;
+  }
+
   .page-main__banner-green {
     background: none;
   }
@@ -103,7 +104,6 @@
     width: 250px;
     height: 52px;
     text-align: left;
-    margin-bottom: 529px;
     margin-left: 90px;
     padding-left: 26px;
     padding-top: 17px;
