--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,13 +1,21 @@
+.programs {
+  margin-bottom: 20px;
+}
+
 .programs__item {
   margin-bottom: 20px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 25px;
   padding-bottom: 20px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 @media (min-width: 768px) {
   .programs {
+    margin-bottom: 0;
     display: flex;
     flex-direction: column;
   }
