--- a/source/sass/blocks/property-list.scss
+++ b/source/sass/blocks/property-list.scss
@@ -6,6 +6,9 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .property-list__logo {
