--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -9,8 +9,13 @@
   &:last-child {
     margin-right: 0;
   }
-}
-
-@media (min-width: 768px) {
-
+  a {
+    color: #444444;
+    &:hover {
+      color: $green;
+    }
+    &:active {
+      color: rgba($green, 0.3);
+    }
+  }
 }
