--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -31,6 +31,8 @@
   flex-wrap: wrap;
   justify-content: space-between;
   border-bottom: 1px solid #ededed;
+  padding-top: 13px;
+  padding-bottom: 17px;
 }
 
 .more-goods__value,
@@ -46,7 +48,7 @@
   font-weight: 400;
   color: $black-title;
   text-transform: uppercase;
-  margin-top: 13px;
+  margin-top: 0;
   margin-bottom: 11px;
 }
 
@@ -54,7 +56,7 @@
   width: 100%;
   font-size: 16px;
   margin-top: 13px;
-  margin-bottom: 17px;
+  margin-bottom: 0;
 }
 
 .more-goods__banner {
