--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -10,6 +10,7 @@
 
 
 .page-footer__copyright {
+  margin-top: 18px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -23,9 +24,6 @@
     height: 42px;
     fill: $grey-text;
   }
-  span {
-    margin-right: 9px;
-  }
   &:hover {
     svg {
       fill: $green;
@@ -37,8 +35,8 @@
 }
 
 .page-footer__logo {
-  padding-top: 37px;
-  padding-bottom: 31px;
+  padding-top: 36px;
+  padding-bottom: 29px;
   border-bottom: 1px solid #d9d9d9;
   width: 280px;
   text-align: center;
@@ -63,8 +61,8 @@
 
 @media (min-width: 768px) {
   .page-footer {
-    padding-top: 48px;
-    padding-bottom: 55px;
+    padding-top: 49px;
+    padding-bottom: 53px;
   }
 
   .page-footer__container {
@@ -90,7 +88,11 @@
   }
 
   .page-footer__copyright {
+    margin-top: 0;
     width: auto;
     justify-content: center;
+    span {
+      margin-right: 8px;
+    }
   }
 }
