--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -97,19 +97,27 @@
   .example__condition {
     padding-left: 69px;
     padding-right: 69px;
+    z-index: 2;
   }
 
   .example__cat {
+    position: relative;
     background: linear-gradient(90deg,$grey 50%,#eaeaea 50%);
     height: 462px;
     padding-bottom: 68px;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     justify-content: space-between;
   }
 
   .example__photo {
     position: absolute;
+    left: 50%;
+    bottom: 84px;
+    transform: translate(-50%, 0);
+    width: 690px;
+    height: 517px;
+    z-index: 1;
   }
 }
 
@@ -119,7 +127,7 @@
   }
 
   .example__wrapper {
-    background: linear-gradient(90deg,$grey 50%,#eaeaea 50%);
+    background: linear-gradient(90deg,$grey 70%,#eaeaea 30%);
   }
 
   .example__container {
@@ -133,13 +141,14 @@
 
   .example__text {
     width: 50%;
+    margin: 0;
   }
 
   .example__description {
     margin: 0;
     padding-top: 70px;
     padding-right: 175px;
-    padding-bottom: 71px;
+    padding-bottom: 68px;
 
   }
 
@@ -164,7 +173,20 @@
 
   .example__cat {
     height: auto;
-    width: 50%;
+    width: auto;
+    margin-left: auto;
     padding-bottom: 75px;
+    background: linear-gradient(90deg,$grey 50%,#eaeaea 50%);
+  }
+
+  .example__condition {
+    padding: 0;
+  }
+
+  .example__photo {
+    min-width: 690px;
+    bottom: 110px;
+    left: 50%;
+    transform: translate(-50%, 0);
   }
 }
