--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -14,7 +14,10 @@
   background-image: url(../img/index-background-mobile@1x.jpg);
   background-position: 50% 0;
   background-repeat: no-repeat;
-
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url(../img/index-background-mobile@2x.jpg);
+    background-size: 320px;
+  }
 }
 
 .page-main__image {
@@ -76,7 +79,13 @@
 
   .page-main__image {
     position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 242px;
     margin: 0;
+    width: 709px;
+    height: 609px;
+    z-index: -1;
   }
 
   .page-main__title {
@@ -84,12 +93,12 @@
     font-size: 60px;
     line-height: 60px;
     text-align: left;
-    padding-top: 50px;
+    padding-top: 41px;
     padding-left: 88px;
     padding-right: 192px;
     &--catalog {
       margin-bottom: 165px;
-      margin-top: 51px;
+      margin-top: 43px;
       border: 0;
       padding: 0;
     }
@@ -148,6 +157,18 @@
     background-image: url(../img/index-background-desktop@1x.jpg);
     background-position: 0 0;
     background-repeat: no-repeat;
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url(../img/index-background-desktop@2x.jpg);
+      background-size: 720px;
+    }
+  }
+
+  .page-main__image {
+    width: 552px;
+    height: 499px;
+    left: 50%;
+    top: 26px;
+    transform: translate(-29%, 0);
   }
 
   .page-main__title {
@@ -158,7 +179,7 @@
     &--catalog {
       margin-left: auto;
       margin-right: auto;
-      margin-top: 73px;
+      margin-top: 59px;
       padding: 0;
     }
     &--programs {
