--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -152,10 +152,26 @@
   }
 
   .production__logo {
-    position: absolute;
+    /*position: absolute;
     left: 50%;
     top: -150px;
-    transform: translate(-50%, 0);
+    transform: translate(-50%, 0);*/
+  }
+
+  .production__photo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: auto;
+    min-width: 324px;
+    &--small{
+      height: 172px;
+      top: -209px;
+    }
+    &--big {
+      height: 208px;
+      top: -245px;
+    }
   }
 
   .production__text {
@@ -216,6 +232,10 @@
     &:nth-child(4n+1) {
       margin-left: auto;
     }
+  }
+
+  .production__photo {
+    min-width: 245px;
   }
 
   .production__title {
