--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,7 @@
 .contacts {
   position: relative;
   background-color: $base;
+
   &--grey {
     background-color: $grey;
   }
@@ -31,14 +32,14 @@
 .contacts__address {
   font-size: 14px;
   line-height: 20px;
-  font-family: arial;
+  font-family: "Arial";
   color: $grey-text;
   margin: 0;
 }
 
 .contacts__map {
   width: 100%;
-  height:362px;
+  height: 362px;
   border: 0;
   z-index: -1;
 }
@@ -46,7 +47,7 @@
 .contacts__map-nojs {
   height: 400px;
   position: absolute;
-  top: 0px;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
   z-index: -1;
@@ -62,6 +63,7 @@
     width: 708px;
     margin: 0 auto;
   }
+
   .contacts__title {
     font-size: 20px;
     line-height: 25px;
@@ -69,12 +71,14 @@
     margin-right: 300px;
     margin-left: 41px;
   }
+
   .contacts__address {
     font-size: 16px;
     line-height: 20px;
     text-align: right;
     margin: 0;
     margin-right: 42px;
+
     span {
       display: inline-block;
       margin-top: 20px;
@@ -122,6 +126,7 @@
   .contacts__address {
     margin: 0;
     text-align: left;
+
     span {
       display: inline-block;
       margin-top: 20px;
