--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -16,20 +16,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: arial;
+  font-family: "Arial";
   font-size: 16px;
   line-height: 16px;
   color: $grey-text;
+
   svg {
     width: 42px;
     height: 42px;
     fill: $grey-text;
   }
+
   &:hover {
     svg {
       fill: $green;
     }
   }
+
   &:active {
     opacity: 0.3;
   }
@@ -41,9 +44,11 @@
   border-bottom: 1px solid #d9d9d9;
   width: 280px;
   text-align: center;
+
   &:hover {
     opacity: 0.8;
   }
+
   &:active {
     opacity: 0.6;
   }
@@ -92,6 +97,7 @@
     margin-top: 0;
     width: auto;
     justify-content: center;
+
     span {
       margin-right: 8px;
     }
