--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -11,11 +11,12 @@
 
 .page-main__banner-green {
   background-color: #64a83b;
-  background-image: url(../img/index-background-mobile@1x.jpg);
+  background-image: url("../img/index-background-mobile@1x.jpg");
   background-position: 50% 0;
   background-repeat: no-repeat;
+
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-    background-image: url(../img/index-background-mobile@2x.jpg);
+    background-image: url("../img/index-background-mobile@2x.jpg");
     background-size: 320px;
   }
 }
@@ -31,6 +32,7 @@
   font-size: 36px;
   line-height: 60px;
   font-weight: 400;
+
   &--white {
     color: $base;
     line-height: 36px;
@@ -56,6 +58,7 @@
   padding-bottom: 167px;
   margin-bottom: 0;
   margin-top: 23px;
+
   &--white {
     color: $base;
   }
@@ -96,12 +99,14 @@
     padding-top: 41px;
     padding-left: 88px;
     padding-right: 192px;
+
     &--catalog {
       margin-bottom: 165px;
       margin-top: 43px;
       border: 0;
       padding: 0;
     }
+
     &--programs {
       margin-bottom: 57px;
       padding-left: 0;
@@ -131,6 +136,7 @@
     padding-left: 90px;
     margin-top: 42px;
     margin-bottom: 48px;
+
     &--programs {
       padding-left: 40px;
       padding-right: 320px;
@@ -154,11 +160,12 @@
     z-index: -1;
     height: 696px;
     background-color: #64a83b;
-    background-image: url(../img/index-background-desktop@1x.jpg);
+    background-image: url("../img/index-background-desktop@1x.jpg");
     background-position: 0 0;
     background-repeat: no-repeat;
+
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      background-image: url(../img/index-background-desktop@2x.jpg);
+      background-image: url("../img/index-background-desktop@2x.jpg");
       background-size: 720px;
     }
   }
@@ -176,12 +183,14 @@
     padding-left: 80px;
     padding-right: 700px;
     z-index: 2;
+
     &--catalog {
       margin-left: auto;
       margin-right: auto;
       margin-top: 59px;
       padding: 0;
     }
+
     &--programs {
       padding: 0;
       margin-top: 73px;
@@ -193,6 +202,7 @@
     margin-right: auto;
     margin-bottom: 52px;
     padding-left: 80px;
+
     &--programs {
       margin-left: 0;
       margin-bottom: 63px;
