--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -14,6 +14,7 @@
   margin-right: 50px;
   margin-top: 20px;
   margin-bottom: 10px;
+
   &--nomr {
     margin: 0;
     text-align: center;
@@ -26,16 +27,19 @@
   width: 100%;
   border-bottom: 1px solid #ededed;
   padding-bottom: 24px;
+
   &:first-child {
     border-top: 1px solid #ededed;
   }
+
   &:last-child {
     padding-top: 80px;
+
     &::before {
       content: "";
       width: 31px;
       height: 31px;
-      background-image: url(../img/icon-plus-mobile.svg);
+      background-image: url("../img/icon-plus-mobile.svg");
       position: absolute;
       top: 27px;
       left: 50%;
@@ -68,14 +72,16 @@
 
 .production__table {
   width: 100%;
-  font-family: arial;
+  font-family: "Arial";
   font-size: 12px;
   line-height: 16px;
   color: $grey-text;
   padding-bottom: 17px;
   border-spacing: 0;
+
   td {
     text-align: left;
+
     &:last-child {
       text-align: right;
     }
@@ -85,7 +91,7 @@
 .production__more {
   margin-top: 7px;
   margin-bottom: 21px;
-  font-family: arial;
+  font-family: "Arial";
   font-size: 12px;
   line-height: 16px;
   color: $grey-text;
@@ -109,6 +115,7 @@
     margin-right: auto;
     margin-bottom: 140px;
     border: 0;
+
     &:first-child {
       border-top: none;
     }
@@ -129,6 +136,7 @@
       margin-bottom: 0;
       padding-top: 163px;
     }
+
     &:nth-last-child(2) {
       margin-bottom: 0;
     }
@@ -151,23 +159,18 @@
     text-align: center;
   }
 
-  .production__logo {
-    /*position: absolute;
-    left: 50%;
-    top: -150px;
-    transform: translate(-50%, 0);*/
-  }
-
   .production__photo {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     width: auto;
     min-width: 324px;
-    &--small{
+
+    &--small {
       height: 172px;
       top: -209px;
     }
+
     &--big {
       height: 208px;
       top: -245px;
@@ -183,6 +186,7 @@
     font-size: 16px;
     line-height: 16px;
     padding-bottom: 32px;
+
     td {
       border-bottom: 1px solid #cdcdcd;
       padding-bottom: 7px;
@@ -212,6 +216,7 @@
     width: 245px;
     margin-right: 80px;
     margin-bottom: 142px;
+
     &:nth-child(odd) {
       margin-left: 0;
       margin-right: 80px;
@@ -221,6 +226,7 @@
       margin-right: 80px;
       margin-left: 0;
     }
+
     &:nth-child(n+5) {
       margin-bottom: 0;
     }
