--- a/source/sass/blocks/property-list.scss
+++ b/source/sass/blocks/property-list.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+
   &:last-child {
     margin-bottom: 0;
   }
@@ -19,25 +20,26 @@
   background-color: $green;
   background-repeat: no-repeat;
   background-position: center;
+
   &--leaf {
-    background-image: url(../img/advantage-leaf@1x.png);
+    background-image: url("../img/advantage-leaf@1x.png");
   }
 
   &--boiling {
-    background-image: url(../img/advantage-powder@1x.png);
+    background-image: url("../img/advantage-powder@1x.png");
   }
 
   &--cutlery {
-    background-image: url(../img/advantage-dining@1x.png);
+    background-image: url("../img/advantage-dining@1x.png");
   }
 
   &--clock {
-    background-image: url(../img/advantage-clock@1x.png);
+    background-image: url("../img/advantage-clock@1x.png");
   }
 }
 
 .property-list__description {
-  font-family: arial;
+  font-family: "Arial";
   font-size: 14px;
   line-height: 18px;
   color: $grey-text;
@@ -57,6 +59,7 @@
     margin: 0;
     padding-bottom: 42px;
     margin-bottom: 90px;
+
     &::before {
       counter-increment: myCounter;
       content: counter(myCounter);
@@ -70,20 +73,24 @@
 
     &:nth-child(2n) {
       padding-left: 30px;
+
       &::before {
         left: 145px;
       }
     }
+
     &:nth-child(2) {
       .property-list__description {
         padding-right: 100px;
       }
     }
+
     &:last-child {
       .property-list__description {
         padding-right: 78px;
       }
     }
+
     &:nth-child(n+2) {
       padding-bottom: 102px;
       margin-bottom: 0;
@@ -109,24 +116,28 @@
     width: 245px;
     margin-right: 80px;
     margin-bottom: 83px;
+
     &::before {
       left: 115px;
     }
+
     &:last-child {
-      margin-right: 0px;
-    }
-    &:nth-child(2n) {
-      padding-left: 0;
-      &::before {
-        left: 110px;
-      }
-    }
-    &:nth-child(2) {
+      margin-right: 0;
+
       .property-list__description {
         padding-right: 0;
       }
     }
-    &:last-child {
+
+    &:nth-child(2n) {
+      padding-left: 0;
+
+      &::before {
+        left: 110px;
+      }
+    }
+
+    &:nth-child(2) {
       .property-list__description {
         padding-right: 0;
       }
