--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -14,7 +14,7 @@
 }
 
 .example__description {
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: $grey-text;
