--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -154,7 +154,7 @@
 
 .form__note {
   display: block;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 16px;
   color: $grey-text;
