--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -72,7 +72,7 @@
 
 .production__table {
   width: 100%;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
   color: $grey-text;
@@ -91,7 +91,7 @@
 .production__more {
   margin-top: 7px;
   margin-bottom: 21px;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
   color: $grey-text;
