--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -59,7 +59,7 @@
 }
 
 .training__description {
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: $grey-text;
