--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -32,7 +32,7 @@
 .contacts__address {
   font-size: 14px;
   line-height: 20px;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   color: $grey-text;
   margin: 0;
 }
