--- a/source/sass/blocks/index-list.scss
+++ b/source/sass/blocks/index-list.scss
@@ -18,7 +18,7 @@
   left: auto;
   top: 100%;
   transform: translateY(-50%);
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 12px;
   color: $grey-text;
