--- a/source/sass/blocks/contacts-list.scss
+++ b/source/sass/blocks/contacts-list.scss
@@ -7,10 +7,16 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  margin-bottom: 13px;
+  margin-bottom: 16px;
 
   &:last-child {
     margin-bottom: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .contacts-list__item {
+    margin-bottom: 20px;
   }
 }
 
