--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,13 +1,13 @@
 .example {
   position: relative;
-  padding-top: 30px;
-  padding-bottom: 38px;
+  padding-top: 29px;
+  padding-bottom: 35px;
   background-color: $grey;
 }
 
 .example__title {
   margin: 0 auto;
-  margin-bottom: 33px;
+  margin-bottom: 35px;
   font-size: 36px;
   line-height: 36px;
   font-weight: normal;
@@ -19,14 +19,15 @@
   line-height: 18px;
   color: $grey-text;
   margin: 0;
-  margin-bottom: 27px;
+  margin-bottom: 25px;
   padding-right: 14px;
 }
 
 .example__spending {
   margin: 0;
+  margin-bottom: 33px;
   padding: 0;
-  padding-top: 7px;
+  padding-top: 9px;
   line-height: 20px;
   text-transform: uppercase;
   text-align: center;
@@ -40,6 +41,7 @@
 
 .example__photo {
   margin-bottom: 30px;
+  max-width: 320px ;
 }
 
 .example__condition {
@@ -71,14 +73,14 @@
   .example__indicators {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 255px;
+    margin-bottom: 232px;
   }
 
   .example__description {
     font-size: 16px;
     line-height: 24px;
     padding-right: 30px;
-    margin-bottom: 53px;
+    margin-bottom: 52px;
   }
 
   .example__spending {
@@ -112,10 +114,11 @@
 
   .example__photo {
     position: absolute;
-    left: 50%;
+    left: 51%;
     bottom: 84px;
     transform: translate(-50%, 0);
     width: 690px;
+    max-width: 690px;
     height: 517px;
     z-index: 1;
   }
@@ -162,7 +165,7 @@
     flex-direction: row;
     margin-bottom: 0;
     padding-top: 0;
-    padding-bottom: 81px;
+    padding-bottom: 76px;
   }
 
   .example__spending-text {
@@ -174,7 +177,7 @@
     height: auto;
     width: auto;
     margin-left: auto;
-    padding-bottom: 75px;
+    padding-bottom: 70px;
     background: linear-gradient(90deg, $grey 50%, #eaeaea 50%);
   }
 
@@ -185,7 +188,7 @@
   .example__photo {
     min-width: 690px;
     bottom: 110px;
-    left: 50%;
+    left: 46%;
     transform: translate(-50%, 0);
   }
 }
