--- a/source/sass/blocks/index-list.scss
+++ b/source/sass/blocks/index-list.scss
@@ -15,9 +15,8 @@
 .index-list__title {
   position: absolute;
   width: 87px;
-  left: auto;
-  top: 100%;
-  transform: translateY(-50%);
+  left: 17px;
+  top: 46px;
   font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 12px;
@@ -65,6 +64,7 @@
     font-size: 14px;
     line-height: 14px;
     background-color: $base;
+    top: 61px;
     left: 26px;
     padding-left: 8px;
     padding-right: 8px;
