--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -1,6 +1,6 @@
 .more-goods {
   position: relative;
-  padding-top: 28px;
+  padding-top: 30px;
   background-color: $base;
 
   &::before {
@@ -9,7 +9,7 @@
     height: 3px;
     width: 100%;
     background-color: $green;
-    top: 42px;
+    top: 44px;
     left: 0;
   }
 }
@@ -32,7 +32,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   border-bottom: 1px solid #ededed;
-  padding-top: 13px;
+  padding-top: 10px;
   padding-bottom: 17px;
 }
 
@@ -50,7 +50,7 @@
   color: $black-title;
   text-transform: uppercase;
   margin-top: 0;
-  margin-bottom: 11px;
+  margin-bottom: 8px;
 }
 
 .more-goods__order {
@@ -64,7 +64,7 @@
   width: 280px;
   height: 289px;
   margin-top: 39px;
-  margin-bottom: 38px;
+  margin-bottom: 35px;
   background-color: $green;
   background-image: url("../img/icon-gift.svg"),
     url("../img/gift-photo-mobile@1x.jpg");
@@ -224,6 +224,7 @@
 
   .more-goods__product {
     width: 325px;
+    margin-right: 7px;
   }
 
   .more-goods__value {
