--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,3 +1,7 @@
+.page-header {
+  border-bottom: 1px solid #ededed;
+}
+
 .page-header__toggle {
   border: 0;
   cursor: pointer;
@@ -56,7 +60,7 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 11px;
-  padding-bottom: 15px;
+  padding-bottom: 13px;
 }
 
 .page-header__logo {
@@ -71,6 +75,7 @@
 
 @media (min-width: 768px) {
   .page-header {
+    border: none;
     width: 708px;
     margin: 0 auto;
     display: flex;
