--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -137,7 +137,7 @@
       padding-top: 163px;
 
       &::before {
-        background-image: url(../img/icon-plus.svg);
+        background-image: url("../img/icon-plus.svg");
         width: 61px;
         height: 61px;
         top: 53px;
