--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -30,11 +30,15 @@
   .main-nav__item {
     text-align: center;
     padding-top: 22px;
-    padding-bottom: 22px;
+    padding-bottom: 19px;
     border-bottom: 1px solid #e6e6e6;
 
     &:first-child {
       border-top: 1px solid #e6e6e6;
+    }
+
+    &:last-child {
+      border-bottom: none;
     }
   }
 }
