--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,6 @@
 .page-header {
   border-bottom: 1px solid #ededed;
+  padding-bottom: 2px;
 }
 
 .page-header__toggle {
@@ -50,6 +51,10 @@
   &--on::after {
     transform: rotate(-45deg);
   }
+
+  &--nojs {
+    display: none;
+  }
 }
 
 .page-header__wrapper {
@@ -78,6 +83,8 @@
     border: none;
     width: 708px;
     margin: 0 auto;
+    padding-top: 12px;
+    padding-bottom: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -101,7 +108,7 @@
 @media (min-width: 1300px) {
   .page-header {
     width: 1220px;
-    padding-top: 44px;
+    padding-top: 55px;
   }
 
   .page-header__wrapper {
