--- a/source/sass/blocks/property-list.scss
+++ b/source/sass/blocks/property-list.scss
@@ -108,6 +108,7 @@
     font-size: 16px;
     line-height: 24px;
     padding-right: 150px;
+    width: 360px;
   }
 }
 
@@ -152,5 +153,6 @@
   .property-list__description {
     margin: 0;
     padding-right: 20px;
+    width: 250px;
   }
 }
