--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -21,6 +21,12 @@
   font-size: 16px;
   line-height: 18px;
   color: $black-form;
+
+  &:active {
+    span {
+      opacity: 0.3;
+    }
+  }
 }
 
 .form__contacts {
@@ -272,6 +278,10 @@
     height: 21px;
     top: 12px;
     right: 12px;
+  }
+
+  &--error {
+    color: #ff8686;
   }
 }
 
